--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -7,14 +7,15 @@
 			{{ with .Site.Params.portfolio.subtitle }}<p class="wow fadeInDown" data-wow-delay=".5s">{{ . }}</p>{{ end }}
 		</div>
 		<div class="row">
-			{{ range $index, $element:= where .Site.RegularPages "Type" "projects" }}
+			{{ range $index, $element:= .Site.RegularPages }}
 			<div class="col-md-4 col-sm-6">
 				{{ $delay := mul $index 300 }}
 				<figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms"
 					data-wow-delay="{{ $delay }}ms">
 					<div class="img-wrapper">
 								<a href="{{ .Permalink }}">
-						<img src="{{ .Params.Image | relURL }}" class="img-fluid" alt="this is a title">
+						{{ with .Params.Id }}<img class="img-fluid" src="https://i.ytimg.com/vi/{{ .  }}/0.jpg" alt="post-image" />{{ end }}
+						{{ with .Params.image }}<img class="img-fluid" src="{{ . | absURL }}" alt="post-image" />{{ end }}
 								</a>
 					</div>
 					<figcaption>
