--- a/layouts/youtube/single.html
+++ b/layouts/youtube/single.html
@@ -1,21 +1,6 @@
 {{ define "main" }}
 
-{{ "<!-- Page Header -->" | safeHTML }}
-<section class="global-page-header">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <h2>{{ .Title }}</h2>
-          <div class="portfolio-meta">
-            <span>{{ dateFormat "Monday, Jan 2, 2006" .Date }}</span>|
-            <span> Category: {{ delimit .Params.category ", " }}</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+{{ partial "single-page-title.html" . }}
 
 {{ "<!-- work details part start -->" | safeHTML }}
 <section class="work-single">
