--- a/layouts/t/_default/list.html
+++ b/layouts/t/_default/list.html
@@ -5,13 +5,12 @@
 <section id="blog-full-width">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8">
+			<div class="col-md-12">
 				{{ range .Data.Pages }}
 				<article class="wow fadeInDown" data-wow-delay=".3s" data-wow-duration="500ms">
 
 					<div class="blog-post-image">
 						<a href="{{ .Permalink }}">
-							{{ with .Params.Id }}<img class="img-fluid" src="https://i.ytimg.com/vi/{{ .  }}/0.jpg" alt="post-image" />{{ end }}
 							{{ with .Params.image }}<img class="img-fluid" src="{{ . | absURL }}" alt="post-image" />{{ end }}
 						</a>
 					</div>
@@ -32,8 +31,10 @@
 							{{ end }}
 						</div>
 						<p>
-							{{ .Content }}
+							{{ .Summary }}
 						</p>
+						{{ with .Permalink }}<a href="{{ . }}" class="btn btn-dafault btn-details hvr-bounce-to-right">Continue
+							Reading</a>{{ end }}
 					</div>
 				</article>
 				{{ end }}
