--- a/layouts/partials/single-page-title.html
+++ b/layouts/partials/single-page-title.html
@@ -16,7 +16,7 @@
 
             </li>
             <li class="list-inline-item">
-		    <a href="{{ .Site.BaseURL }}{{ .File.Dir }}">
+		    <a href="{{ .Site.BaseURL }}/{{ .File.Dir }}">
 		      {{ with .Site.GetPage .File.Dir }}{{ .Title }}{{ end }} 
               </a>
 	      &nbsp; &nbsp;/
