--- a/layouts/partials/parent-view.html
+++ b/layouts/partials/parent-view.html
@@ -7,7 +7,7 @@
 			{{ with .Site.Params.portfolio.subtitle }}<p class="wow fadeInDown" data-wow-delay=".5s">{{ . }}</p>{{ end }}
 		</div>
 		<div class="row">
-			{{ range $index, $element:= .Site.RegularPages }}
+			{{ range $index, $element := where (where $.Site.RegularPages "Type" "*") "File.Dir" .Prev  }}
 			<div class="col-md-4 col-sm-6">
 				{{ $delay := mul $index 300 }}
 				<figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms"
