--- a/layouts/shortcodes/oembed.html
+++ b/layouts/shortcodes/oembed.html
@@ -2,9 +2,9 @@
 {{- $appId := $oe.appId -}}
 {{- $clientToken := $oe.clientToken -}}
 {{- if not $oe.privacy -}}
-{{ $host := "fb" }}
-{{ $type := "video" }}
-{{ $id := .Params.fbvideo }}
+{{ $host := .Get 0 }}
+{{ $type := .Get 1 }}
+{{ $id := .Get 2 }}
 {{- if eq $type "page" -}}
 {{ with getJSON "https://graph.facebook.com/v11.0/oembed_" $type "?url=" $id "&show_posts=false" "&access_token=" $appId "|" $clientToken }}{{ .html | safeHTML }}{{ end }}
 {{- else -}}
